# corelle

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  NOTES.md  README.md  build-deps.sh  docker-compose.development.yaml  docker-compose.production.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt  run-docker  setup.py
.github/workflows/: ci.yml
api-server/: pyproject.toml
api-server/corelle/api_server/: api.py  build_cache.py  cli.py  database.py  load_data.py  test_gplates.py
api-server/corelle/api_server/query/: cache-feature-dataset.sql
api-server/corelle/api_server/rotate/: engine.py  storage.py  test_rotate.py
api-server/corelle/api_server/sql/: 01-schema.sql
conf/: nginx.certbot.conf  nginx.conf
corelle/: api.py  cli.py  database.py  env.py  load_data.py  rotate.py  test_api.py  test_gplates.py  test_model.py  test_rotate.py  util.py
corelle-api-server/: pyproject.toml  setup.py
corelle-api-server/corelle_server/: load_data.py
corelle-api-server/corelle_server/query/: cache-feature-dataset.sql  feature-dataset-cached.sql  plate-time-ranges.sql  plates-for-model.sql  rotation-pairs-for-time.sql
corelle-client/: package.json  rollup.config.js  tsconfig.json
corelle-client/src/: index.ts  math.ts  rotations.ts
corelle-client/src/components/: feature.ts  index.ts  plate-polygons.ts  provider.ts
corelle/proc/: 01-schema.sql
corelle/query/: __init__.py  active-plates-at-time.sql  cache-feature-dataset.sql  feature-dataset-cached.sql  feature-dataset.sql  modern-plate-polygons-cached.sql  modern-plate-polygons.sql  plate-for-point.sql  plate-time-ranges.sql  plates-for-model.sql  rotation-pairs-for-model.sql  rotation-pairs-for-time.sql  rotation-pairs.sql  rotation-sequence.sql  rotations-after.sql  rotations-before.sql  time-steps-for-plate.sql
corelle/rotate/: __init__.py  engine.py  math.py  test_rotate.py
corelle/sql/: 00-init.sql  01-schema.sql  02-functions.sql  02-views.sql  get-rotation.sql
data/: README.md  eglington-fields.yaml  scotese-fields.yaml  scotese.rot  seton-fields.yaml  seton_2012.geojson  wright-fields.yaml
data/eglington/: DV_pdf_Crys_MetpR.xls  README.md
data/from-Andrew-Zaffos/: scotese.geojson  seton_2012.rot  wright_2013.rot  wright_plates.geojson
data/from-Bruce-Eglington/: PlatePolygons2016All.dbf  PlatePolygons2016All.sbn  PlatePolygons2016All.sbx  PlatePolygons2016All.shp  PlatePolygons2016All.shp.GeosoftMeta  PlatePolygons2016All.shp.gplates.xml  PlatePolygons2016All.shp.xml  PlatePolygons2016All.shx  SumTotalAreaForAge.xlsx  T_Rot_Model_PalaeoPlates_2019_20190302_experiment.rot
features/: macrostrat_columns.json
frontend/: .babelrc  .gitignore  .postcssrc  .yarnrc.yml  Dockerfile  corelle-client  dev-server.js  index.html  package.json  publish.sh
frontend/corelle-client/: package.json
frontend/corelle-client/src/components/: feature.ts  plate-polygons.ts  provider.ts
frontend/scripts/: publish  tag-release
frontend/src/: app.coffee  app.ts  control-panel.coffee  control-panel.ts  globe.js  index.coffee  index.ts  main.module.styl  main.styl  map-settings.coffee  map-settings.ts  math.coffee  math.ts  rotations.coffee  rotations.ts  world-map.coffee  world-map.ts
frontend/src/globe/: canvas-layer.coffee  canvas-layer.ts  canvas.coffee  context.coffee  context.ts  drag-interaction.coffee  drag-interaction.ts  hyper.coffee  hyper.ts  index.coffee  index.ts  math.js  math.ts  module.styl  reference.coffee  reference.ts
notebooks/: Corelle-Paleolatitude.ipynb  client-rotations-test.py  corelle-python-plotting.py  corelle_helpers.py  geom_helpers.py
py-packages/basics/: pyproject.toml
py-packages/basics/corelle/math/: util.py
py-packages/client/: pyproject.toml
py-packages/client/corelle/client/: __init__.py  geom_utils.py  rotate.py
py-packages/client/corelle/math/: __init__.py
py-packages/engine/: pyproject.toml
py-packages/engine/corelle/engine/: cache.py  cli.py  database.py  load_data.py  rotate.py  storage.py
py-packages/engine/corelle/engine/query/: __init__.py  delete-extraneous-cache.sql  plate-time-ranges.sql  plates-for-model.sql  rotation-pairs-for-model.sql  update-cache.sql
py-packages/engine/corelle/engine/schema/: 01-schema.sql  02-functions.sql  03-testing-functions.sql
py-packages/engine/corelle/tests/: conftest.py  rotation_testing_functions.py  test_database_rotations.py  test_gplates.py  test_model.py  test_rotate.py  utils.py
py-packages/engine/corelle/tests/fixtures/: Seton2012-relative-rotations-2Ma.csv  seton2012-gws-response-0.geojson
py-packages/engine/corelle/tests/test-data/: seton2012-gws-request-africa.geojson
py-packages/server/: pyproject.toml
py-packages/server/corelle/server/: __init__.py  api.py  build_cache.py  database.py  load_data.py  test_api.py  test_gplates.py  test_model.py
py-packages/server/corelle/server/query/: rotation-pairs-for-model.sql  rotation-pairs-for-time.sql  rotation-pairs.sql
py-packages/server/corelle/server/rotate/: engine.py  storage.py  test_rotate.py
py-packages/server/corelle/server/sql/: 02-functions.sql  03-views.sql
py-packages/server/corelle/tests/: test_database_rotations.py  test_gplates.py
py-packages/server/corelle/tests/test-data/: seton2012-gws-response-1.geojson  seton2012-gws-response-140.geojson  seton2012-gws-response-200.geojson
test-data/: Seton2012-rotations-100Ma.csv  Seton2012-rotations-10Ma.csv  seton2012-gws-request.geojson  seton2012-gws-response-10.geojson  seton2012-gws-response-120.geojson  seton2012-gws-response-africa-140.geojson
