[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "An API service to support plate rotations on the web"
name = "corelle"
version = "2.0.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
"corelle.client" = {path = "./py-packages/client", develop = true}
"corelle.server" = {path = "./py-packages/server", develop = true}
pytest = "^6.2.3"

[tool.poetry.scripts]
corelle = 'corelle.api_server.cli:cli'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
