[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "An API server application for the Corelle plate-rotation system"
license = "MIT"
name = "corelle.api_server"
version = "1.0.0"

packages = [
  {include = "corelle"},
]

[tool.poetry.dependencies]

Fiona = "^1.8.22"
Flask = "^1"
Flask-RESTful = "^0.3.9"
IPython = "^8"
PyYAML = "^6.0"
numba = "^0.56.3"
numpy = "^1.23.4"
numpy-quaternion = "^2022.4.2"
pg-viewtils = {url = "https://github.com/davenquinn/pg-viewtils/archive/master.zip"}
psycopg2-binary = "^2.9.5"
python = "^3.8"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
corelle = 'corelle.api_server.cli:cli'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
