[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "An API server application for the Corelle plate-rotation system"
license = "MIT"
name = "corelle-api-server"
version = "1.0.0"

[tool.poetry.dependencies]
PyYAML = "^6.0"
numpy = "^1.23.4"
numpy-quaternion = "^2022.4.2"
psycopg2-binary = "^2.9.5"
python = "^3.8"
Flask = "^1"
Flask-RESTful = "^0.3.9"
simplejson = "^3.17.6"
Fiona = "^1.8.22"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
