[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "An API server application for the Corelle plate-rotation system"
license = "MIT"
name = "corelle-api-server"
version = "1.0.0"

packages = [
  {include = "corelle_server"},
]

[tool.poetry.dependencies]

Fiona = "^1.8.22"
Flask = "^1"
Flask-RESTful = "^0.3.9"
PyYAML = "^6.0"
numpy = "^1.23.4"
numpy-quaternion = "^2022.4.2"
pg_viewtils = "https://github.com/davenquinn/pg-viewtils/archive/master.zip"
psycopg2-binary = "^2.9.5"
python = "^3.8"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
