[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "An API server application for the Corelle plate-rotation system"
license = "MIT"
name = "corelle.engine"
version = "1.3.0"

packages = [{ include = "corelle" }]

[tool.poetry.dependencies]

Fiona = "^1.9.5"
IPython = "^8"
PyYAML = "^6.0"
"corelle.client" = { path = "../client", develop = true }
"macrostrat.database" = "^2.0.0"
"macrostrat.utils" = "^1.0.1"
numba = "^0.58.1"
numpy = "^1.23.4"
numpy-quaternion = "^2022.4.2"
psycopg2-binary = "^2.9.5"
python = "^3.8"
rich = "^12.6.0||^13.0.0"
typer = "^0.6.1||^0.7.0||^0.8.0||^0.9.0"
wget = "^3.2"
geoalchemy2 = "^0.9.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
corelle = 'corelle.engine:cli'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
