[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "An API server application for the Corelle plate-rotation system"
license = "MIT"
name = "corelle.server"
version = "1.0.0"

packages = [
  {include = "corelle"},
]

[tool.poetry.dependencies]

Flask = "^1"
Flask-RESTful = "^0.3.9"
MarkupSafe = "2.0.1"
"corelle.client" = {path = "../client", develop = true}
"corelle.engine" = {path = "../engine", develop = true}
itsdangerous = "<2.1.0"
jinja2 = "<3.2.0"
numpy = "^1.26.3"
python = "^3.9"
simplejson = "^3.17.6"
"werkzeug" = "2.0.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
